@@ -1,0 +1,16 @@
+# PowerPC xcoff AltiVec tests
+#as: -mppc -maltivec
+	.machine	"ppc"
+	.csect .text[PR]
+	.csect main[DS]
+main:
+	.csect .text[PR]
+.main:
+	dss	3
+	dssall	2
+	dst	5,4,1
+	dstt	8,7,0
+	dstst	5,6,3
+	dststt	4,5,2
+
+
